data/derived/comb/progs/unify/prog2872.ml.out
Characters 55-56:
  |h::t -> h;;
           ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
